--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -9,7 +9,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en-US" class="bg-gray-100">
+<html lang="en-US" class="bg-gray-100" transition:animate="slide">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
